GNOME Bugzilla – Bug 132448
Crashing when trying to auto filter on a non-continuous selection
Last modified: 2004-12-22 21:47:04 UTC
Distribution: Debian testing/unstable Package: Gnumeric Severity: major Version: GNOME2.4.1 1.2.x Gnome-Distributor: Debian Synopsis: Crashing when trying to auto filter on a non-continuous selection Bugzilla-Product: Gnumeric Bugzilla-Component: Main System Bugzilla-Version: 1.2.x BugBuddy-GnomeVersion: 2.0 (2.4.0.1) Description: Description of the crash: I was trying to apply an auto filter to a non-continuous selection. I got the following error message: "Invalid Add Filter : 'cannot be performed with multiple ranges selected'" After clicking OK, gnumeric crashed. This happens every time I try this. Steps to reproduce the crash: 1. Select multiple ranges of cells using control-right-click. 2. Select "Add Auto Filter" from menu. 3. Click OK Button on dialog box Expected Results: Application doesn't crash. How often does this happen? Every time Additional Information: If needed, I can supply the file I was working with Debugging Information: Backtrace was generated from '/usr/bin/gnumeric' (no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...[New Thread 16384 (LWP 1026)] (no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...(no debugging symbols found)...0x40a91bd8 in waitpid () from /lib/libpthread.so.0
+ Trace 43470
Thread 1 (Thread 16384 (LWP 1026))
------- Bug moved to this database by unknown@bugzilla.gnome.org 2004-01-25 02:03 ------- The original reporter (jacques@blergl.net) of this bug does not have an account here. Reassigning to the exporter, unknown@bugzilla.gnome.org. Reassigning to the default owner of the component, jody@gnome.org.
Thanks but I don't think we need your file. It seems to be happening even with an empty file.
easy fix. I'll patch the poorly worded error message in head too.
bah. forgot to mark this as closed